--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <header>
     <div class="container">
         <!--💡UPDATE: Change to your name and title-->
-        <h1>Your Name</h1>
+        <h1>AZGHIRI MOHAMED REDA</h1>
         <p>Data Analyst | Power BI | Data Scientist</p>
         <div class="social-links">
             <!--💡UPDATE: Add your social media links and CV file-->
@@ -79,7 +79,7 @@
                 <!--💡UPDATE: Add a preview image of your project to assets/images/ -->
                 <img src="assets/images/project-placeholder-1.jpg" alt="Project One Preview">
                 <div class="project-card-content">
-                    <h3>Project Title One</h3>
+                    <h3>Dashboard of cars sales in india</h3>
                     <p>A brief, one or two-sentence description of your project, what it does, and the tools you used.</p>
                     <div class="project-buttons">
                         <!--💡UPDATE: Add link to your project's code/documentation on GitHub-->
@@ -149,7 +149,6 @@
                 <ul class="skill-list">
                     <li>Power BI</li>
                     <li>Tableau</li>
-                    <li>Looker Studio</li>
                     <li>Excel Dashboards</li>
                 </ul>
             </div>
@@ -179,6 +178,7 @@
                     <li>DAX</li>
                     <li>Star Schema Design</li>
                     <li>ETL Processes</li>
+                    <li>SQL Server (SSIS, SSMS)</li>
                 </ul>
             </div>
 
